<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:paddingTop="50dp"
    android:layoutDirection="rtl">

    <!-- logo -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="fitCenter"
        android:src="@drawable/app_logo"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appTitle"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:fontFamily="@font/assistant_font"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/herzliyaHebrewGymnasium"
        android:textSize="20sp"
        android:fontFamily="@font/assistant_font"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/lendEquipment"
            android:textSize="30sp"
            android:fontFamily="@font/assistant_font"
            android:id="@+id/btnLend"
            android:onClick="onButtonAction"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/returnEquipment"
            android:textSize="30sp"
            android:fontFamily="@font/assistant_font"
            android:id="@+id/btnReturn"
            android:onClick="onButtonAction"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manageEquipmentList"
            android:fontFamily="@font/assistant_font"
            android:textSize="20sp"
            android:textColor="#6B117A"
            android:visibility="gone"
            android:id="@+id/btnManageDatabase"
            android:onClick="onButtonAction"/>

    </LinearLayout>

</LinearLayout>