<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/assistant_font"
        android:text="@string/newItem"
        android:textSize="30sp"
        android:layout_marginBottom="10dp"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TableRow>

            <TextView
                android:fontFamily="@font/assistant_font"
                android:text="@string/category"
                android:textSize="20sp" />

            <Spinner android:layout_width="120dp"
                android:id="@+id/spnAddCategory"
                android:entries="@array/category_list"/>

        </TableRow>

        <TableRow>

            <TextView
                android:fontFamily="@font/assistant_font"
                android:text="@string/itemNameLabel"
                android:textSize="20sp"
                android:labelFor="@id/etAddItemName"/>

            <EditText android:id="@+id/etAddItemName"
                android:fontFamily="@font/assistant_font"
                android:inputType="text"/>

        </TableRow>

        <TableRow>

            <TextView
                android:fontFamily="@font/assistant_font"
                android:text="@string/itemIDLabel"
                android:textSize="20sp"
                android:layout_marginEnd="20dp"
                android:labelFor="@id/etAddItemID"/>

            <EditText android:id="@+id/etAddItemID"
                android:fontFamily="@font/assistant_font"
                android:inputType="text"/>

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:id="@+id/btnAddConfirm"
            android:textColor="#08AA08"
            android:layout_marginEnd="20dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/btnAddCancel"
            android:textColor="#CA1212"/>

    </LinearLayout>

</LinearLayout>