<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LendActivity"
    android:layoutDirection="rtl">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:layout_gravity="center"
        android:textColor="#160303"
        android:id="@+id/tvLendTitle"
        android:focusableInTouchMode="true"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp">


        <TextView
            android:id="@+id/tvLendSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chooseItemTitle"
            android:textSize="20sp"
            app:fontFamily="@font/assistant_font" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/scanCode"
            android:fontFamily="@font/assistant_font"
            android:textSize="20sp"
            android:onClick="onBarcodeRequest"
            tools:targetApi="jelly_bean" />


    </LinearLayout>

    <SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="false"
        android:queryHint="חיפוש"
        android:id="@+id/searchItems" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lvLend"
            android:visibility="gone"
            android:layoutDirection="ltr"
            tools:targetApi="jelly_bean_mr1">

        </ListView>

        <il.appclass.zelther.photostudiogymnasia.GraySquareLoadingView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/animLoading"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/noAvailableItems"
            android:fontFamily="@font/assistant_font"
            android:textSize="15sp"
            android:id="@+id/tvEmptyList"
            android:visibility="gone"
            tools:targetApi="jelly_bean" />

    </FrameLayout>

</LinearLayout>